--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "author": "Thomas Long <tommy5dollar@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "deploy": "gcloud beta functions deploy <FUNC_NAME> --stage-bucket <BUCKET_NAME> --trigger-http --entry-point process",
-    "simulator": "<GACTIONS_SDK_PATH>gactions preview -action_package=action.json -invocation_name=<VOICE_COMMAND>"
+    "start": "node handler.js"
   },
   "dependencies": {
     "actions-on-google": "^1.2.0",
