--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "actions-on-google": "^1.2.0",
+    "alexa-app": "^4.1.0",
     "moment": "^2.18.1",
+    "momentjs": "^2.0.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
     "underscore": "^1.8.3"
